app/assets/stylesheets/datepicker.css
#datePicker {
  width: 400px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
  height: 600px;
  margin-left: 25px;
}

.decade {
  cursor: default;
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  font-weight: 300;
  height: 100px;
  width: 300px;
  padding-top: 5px;
}

.decadeHeader {
  margin-right: 25px;
  transition: color .2s;
}

.decadeYears {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  align-content: flex-start;
  height: 100px;
}

.decadeYear {
  margin: 0px 5px;
  margin-bottom: 6px;
}

.decadeYear:hover {
  color: rgba(255, 123, 109, 0.5);
  transition: color .2s;
  cursor: pointer;
}

.months {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  align-content: flex-start;
  height: 100px;
}

.month:hover {
  color: rgba(255, 123, 109, 0.5);
  transition: color .2s;
  cursor: pointer;
}

.month {
  margin: 0px 6px;
  margin-bottom: 6px;
}

